tests/wpt/tests/third_party/test262/test/built-ins/RegExp/property-escapes/binary-property-with-value-ASCII_-_Y-negated.js
// Copyright 2018 Mathias Bynens. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Mathias Bynens
description: >
  Binary properties with an explicit value must throw in Unicode property
  escapes (even if the value is valid).
esid: sec-static-semantics-unicodematchproperty-p
negative:
  phase: parse
  type: SyntaxError
features: [regexp-unicode-property-escapes]
---*/

$DONOTEVALUATE();

/\P{ASCII=Y}/u;
